Transferred from the Adobe Open Source Subversion Repository
Revision: 17448
Author:   hmuller@adobe.com
Date:     2010-08-23T20:43:00.984654Z

Log Message: 
-----------
Default for DataGrid textFieldClass is now "mx.core.UIFTETextField".

DefaultGridItemRenderer/'set label' now calls invalidateDisplayList().

GridLayout should be more robust when faced with empty/null columns or dataProvider.

Changing Grid variableRowHeight flushes the layout cache.

QE notes: All expected test failures have been excluded.
Doc notes: 
Bugs: SDK-27271
Reviewer: Kevin
Tests run: none
Is noteworthy for integration: no

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/Grid.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/supportClasses/GridLayout.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/defaults.css</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/skins/spark/DefaultGridItemRenderer.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/supportClasses/ColumnHeaderBarLayout.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274885 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -66,6 +66,7 @@ ComboBox
 
 DataGrid
 {
+    textFieldClass: ClassReference("mx.core.UIFTETextField");
     skinClass: ClassReference("spark.skins.spark.DataGridSkin");
 }
 
