--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -69,9 +69,10 @@ DataGrid
     skinClass: ClassReference("spark.skins.spark.DataGridSkin");
 }
 
-DefaultColumnHeaderRenderer
+DefaultGridHeaderRenderer
 {
     cornerRadius: 0;
+    skinClass: ClassReference("spark.skins.spark.DefaultGridHeaderRendererSkin");    
 }
 
 DropDownList
