Transferred from the Adobe Open Source Subversion Repository
Revision: 18023
Author:   aharui@adobe.com
Date:     2010-10-05T22:09:32.510025Z

Log Message: 
-----------
Initial implementation of prompts in TextInput, TextArea, ComboBox.

QE notes: XD input still pending so don't take bitmaps just yet.
Doc notes: see new APIs
Bugs: SDK-20959
Reviewer: Corey
Tests run: checkintests mustella/gumbo/ComboBox, TextInput, TextArea
Is noteworthy for integration: yes

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/skins/spark/TextInputSkin.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/wireframe/src/spark/skins/wireframe/TextInputSkin.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/ComboBox.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/skins/spark/ComboBoxTextInputSkin.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/skins/spark/TextAreaSkin.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/defaults.css</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/supportClasses/SkinnableTextBase.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/wireframe/src/spark/skins/wireframe/TextAreaSkin.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/wireframe/defaults.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274890 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -171,6 +171,18 @@ SkinnableContainer
     skinClass: ClassReference("spark.skins.spark.SkinnableContainerSkin");
 }
 
+SkinnableTextBase:normalWithPrompt 
+{
+    color: #CCCCCC;
+    fontStyle: italic;
+}
+
+SkinnableTextBase:disabledWithPrompt 
+{
+    color: #CCCCCC;
+    fontStyle: italic;
+}
+
 Spinner
 {
     skinClass: ClassReference("spark.skins.spark.SpinnerSkin");    
