Transferred from the Adobe Open Source Subversion Repository
Revision: 18068
Author:   aharui@adobe.com
Date:     2010-10-07T17:54:24.030414Z

Log Message: 
-----------
Fix a bundle of prompt text bugs

QE notes: I think you can create bitmaps now
Doc notes: none
Bugs: SDK-28117, SDK-28118, SDK-28119, SDK-28120, SDK-28121, SDK-28124, SDK-28132
Reviewer: Corey
Tests run: checkintests mustella/gumbo/ComboBox, TextInput, TextArea
Is noteworthy for integration: yes

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/skins/spark/TextInputSkin.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/wireframe/src/spark/skins/wireframe/TextInputSkin.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/skins/spark/ComboBoxTextInputSkin.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/skins/spark/TextAreaSkin.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/defaults.css</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/supportClasses/SkinnableTextBase.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/wireframe/src/spark/skins/wireframe/TextAreaSkin.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/wireframe/defaults.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274891 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -173,13 +173,13 @@ SkinnableContainer
 
 SkinnableTextBase:normalWithPrompt 
 {
-    color: #CCCCCC;
+    color: #BABABA;
     fontStyle: italic;
 }
 
 SkinnableTextBase:disabledWithPrompt 
 {
-    color: #CCCCCC;
+    color: #BABABA;
     fontStyle: italic;
 }
 
