Transferred from the Adobe Open Source Subversion Repository
Revision: 18265
Author:   hmuller@adobe.com
Date:     2010-10-21T17:03:48.301800Z

Log Message: 
-----------
DataGrid Tier 2 PARB Changes

Added GridColumn columnName parameter; as in MX DataGridColumn.

The selection property set methods added for Tier 2, like selectedIndices, now only defer when they're called before the component has been initialized.

Removed the (GridColumnHeaderGroup) overlayGroup property.

Replaced GridColumnHeaderBar mouseSeparatorWidth property with "separatorAffordance" style.

QE notes: Gaurav assured me that the 7 Button (timeout) and 2 DateTimeFormatter cyclone failures aren't related to this commit
Doc notes: 
Bugs: 
Reviewer: Kevin
Tests run: checkin, mustella cyclone 
Is noteworthy for integration: no

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/Grid.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/gridClasses/GridColumn.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/GridColumnHeaderGroup.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/components/gridClasses/GridColumnHeaderGroupLayout.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/defaults.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274892 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -90,6 +90,11 @@ FormItem
     skinClass : ClassReference("spark.skins.spark.FormItemSkin");
 }
 
+GridColumnHeaderGroup
+{
+    separatorAffordance: 5;
+}
+
 HScrollBar
 {
     skinClass: ClassReference("spark.skins.spark.HScrollBarSkin");
