Transferred from the Adobe Open Source Subversion Repository
Revision: 18569
Author:   egeorgie@adobe.com
Date:     2010-11-13T00:36:07.390544Z

Log Message: 
-----------
Animations to ViewMenu, default skin for SkinnablePopUpContainer

- Add SkinnablePopUpContainerSkin
- Add state transitions for ViewMenuSkin

QE notes:
Doc notes: 
Bugs:
Reviewer: Jason
Tests run: manual, checkintests
Is noteworthy for integration: Yes

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/SparkClasses.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/mobilecomponents/src/spark/components/supportClasses/MobileApplicationBase.as</path>
<path kind="file" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/spark/skins/spark/SkinnablePopUpContainerSkin.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/defaults.css</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/mobiletheme/src/spark/skins/mobile/ViewMenuSkin.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274893 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -176,6 +176,11 @@ SkinnableContainer
     skinClass: ClassReference("spark.skins.spark.SkinnableContainerSkin");
 }
 
+SkinnablePopUpContainer
+{
+    skinClass: ClassReference("spark.skins.spark.SkinnablePopUpContainerSkin");
+}
+
 SkinnableTextBase:normalWithPrompt 
 {
     color: #BABABA;
