--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -85,6 +85,7 @@ FormHeading
 
 FormItem
 {
+    fontWeight : "bold";
     errorIndicatorSource : Embed(source="assets/ErrorIndicator.png");
     requiredIndicatorSource : Embed(source="assets/RequiredIndicator.png");
     skinClass : ClassReference("spark.skins.spark.FormItemSkin");
