Transferred from the Adobe Open Source Subversion Repository
Revision: 20151
Author:   jasonsj@adobe.com
Date:     2011-02-04T23:31:21.749976Z

Log Message: 
-----------
Moved spark-specific styles out of spark/defaults.css into themes/Spark/spark.css. Removed unnecessary styles from mobiletheme/defaults.css.

QE notes: 
Doc notes: 
Bugs: 
SDK-28265 Having DropDownList in a mobile project causes compiler warning
Reviewer: gruehle
Tests run: checkintests
Is noteworthy for integration: No

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/themes/Spark/spark.css</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/mobiletheme/defaults.css</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/defaults.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274896 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -51,7 +51,7 @@ CheckBox
 
 ComboBox
 {
-    dropShadowVisible: true;
+/*  dropShadowVisible: true; in spark.css */
     paddingBottom: 3;
     paddingLeft: 3;
     paddingRight: 3;
@@ -67,7 +67,7 @@ DataGrid
 
 DropDownList
 {
-    dropShadowVisible: true;
+/*  dropShadowVisible: true; in spark.css */
     skinClass: ClassReference("spark.skins.spark.DropDownListSkin");
 }
 
@@ -133,10 +133,13 @@ NumericStepper
 Panel
 {
     backgroundColor: #FFFFFF;
+/* in spark.css */
+/*
     borderAlpha: 0.5;
     borderColor: 0;
     cornerRadius: 0;
     dropShadowVisible: true;
+*/
 	skinClass: ClassReference("spark.skins.spark.PanelSkin");
 }
 
@@ -229,10 +232,13 @@ TextInput
 
 TitleWindow
 {
+/* in spark.css */
+/*
 	borderAlpha: 0.8;
 	borderColor: 0;
 	cornerRadius: 0;
 	dropShadowVisible: true;
+*/
 	skinClass: ClassReference("spark.skins.spark.TitleWindowSkin");
 }
 
@@ -248,7 +254,7 @@ VideoDisplay
 
 VideoPlayer
 {
-    dropShadowVisible: true;
+/*  dropShadowVisible: true; in spark.css */
     layoutDirection: "ltr";
     skinClass: ClassReference("spark.skins.spark.VideoPlayerSkin");
 }
