Transferred from the Adobe Open Source Subversion Repository
Revision: 22445
Author:   jasonsj@adobe.com
Date:     2011-09-08T18:23:16.733584Z

Log Message: 
-----------
PARB changes for SkinnablePopUpContainer SoftKeyboard effects.

Deleted SoftKeyboardPopUpTransition. Merged SoftKeyboardPopUpTransition to SkinnablePopUpContainer. Removed transition events. Added softKeyboardEffectDuration style. Removed override for Application.resizeForSoftKeyboard. Updated XD motion design.

SDK-31459 respect minHeight in SK effect
SDK-31437 do not access FlexGlobals.topLevelApplication in SkinnablePopUpContainer constructor

QE notes:
Doc notes:
Bugs: 
SDK-31459 StageText spills out of Callout on Callout resize
SDK-31437 RTE when PopUp/Callout is defined in Declarations as a single instance
Reviewer: tkraikit
Tests run: checkintests, mustella
Is noteworthy for integration: yes

Modified Paths:
--------------
<path kind="dir" action="D">/private/flex/sdk/branches/4.y/frameworks/projects/spark/src/spark/transitions</path>
<path kind="file" action="M">/private/flex/sdk/branches/4.y/frameworks/projects/spark/src/spark/components/SkinnablePopUpContainer.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/4.y/frameworks/projects/mobilecomponents/src/spark/components/Callout.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/4.y/frameworks/projects/spark/defaults.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274897 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -273,3 +273,8 @@ VSlider
 {
     skinClass: ClassReference("spark.skins.spark.VSliderSkin");
 }
+
+global
+{
+    softKeyboardEffectDuration: 150;
+}
