Transferred from the Adobe Open Source Subversion Repository
Revision: 10905
Author:   cframpto@adobe.com
Date:     2009-10-07T13:28:43.800321Z

Log Message: 
-----------
NumericStepper needs a textFieldClass style.

QE notes:
Doc notes: 
Bugs: 
Reviewer: Gordon
Tests run: checkintests
Is noteworthy for integration: no

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/spark/MXFTEText.css

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274906 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/MXFTEText.css
+++ b/projects/spark/MXFTEText.css
@@ -117,6 +117,7 @@ MenuItemRenderer
 
 NumericStepper
 {
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
 	textInputClass: ClassReference("mx.controls.MXFTETextInput");
 }
 
