Transferred from the Adobe Open Source Subversion Repository
Revision: 11525
Author:   klin@adobe.com
Date:     2009-11-06T20:09:36.020681Z

Log Message: 
-----------
halo to mx namespace change with backwards support for the halo namespace.

I've renamed halo-manifest to mx-manifest, and renamed the namespace "library://ns.adobe.com/flex/halo" to "library://ns.adobe.com/flex/mx". In addition, the halo namespace is also mapped to the mx-manifest, which allows us to support both namespaces.

Modified build files, css files, development applications, and certain skins to use the new mx namespace.

This change required a small fix to the compiler to recognize both namespaces.

QE notes: No
Doc notes: Yes, you may update doc examples to use new mx namespace.
Bugs: No
Reviewer: Pete
Tests run: checkintests, mustella compile
Is noteworthy for integration: Yes, new mx namespace can be used.

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/flex-config.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/sparkTest/src/NewEffects.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/sparkTest/src/AddItemsTest.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/sparkTest/src/skins/MyVScrollBarSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/rpc/.actionScriptProperties</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/sparkTest/src/RemoveItemsTest.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/themes/AeonGraphical/AeonGraphical.css</path>
<path kind="file" action="M">/flex/sdk/trunk/asdoc/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/halo/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/airframework/.actionScriptProperties</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/r

--- a/projects/spark/MXFTEText.css
+++ b/projects/spark/MXFTEText.css
@@ -43,7 +43,7 @@
     You should not modify this file.
 */
 
-@namespace "library://ns.adobe.com/flex/halo";
+@namespace "library://ns.adobe.com/flex/mx";
 @namespace s "library://ns.adobe.com/flex/spark";
 
 
