Transferred from the Adobe Open Source Subversion Repository
Revision: 13056
Author:   hneelu@adobe.com
Date:     2009-12-17T17:08:23.557597Z

Log Message: 
-----------
Adding FTE changes for ADG

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/SparkClasses.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/spark-manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/MXFTEText.css</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274910 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/MXFTEText.css
+++ b/projects/spark/MXFTEText.css
@@ -159,3 +159,70 @@ mx|ToolTip
 {
 	textFieldClass: ClassReference("mx.core.UIFTETextField");
 }
+
+mx|AdvancedDataGrid
+{
+	defaultDataGridItemEditor: ClassReference("mx.controls.MXFTETextInput");
+	defaultDataGridItemRenderer: ClassReference("mx.controls.advancedDataGridClasses.FTEAdvancedDataGridItemRenderer");
+}
+
+mx|AdvancedDataGridGroupItemRenderer
+{
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+mx|AdvancedDataGridHeaderRenderer
+{
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+mx|AdvancedDataGridSortItemRenderer
+{
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+mx|AxisRenderer
+{
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+mx|BarSeries
+{
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+mx|ChartLabel
+{
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+mx|ColumnSeries
+{
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+mx|DataTip
+{
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+s|FTEAdvancedDataGridItemRenderer
+{
+	paddingLeft: 5 /* to match AdvancedDataGridItemRenderer in the MX defaults.css */
+}
+
+mx|LegendItem
+{
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+mx|OLAPDataGridGroupRenderer
+{
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
+mx|PieSeries
+{
+	textFieldClass: ClassReference("mx.core.UIFTETextField");
+}
+
