Transferred from the Adobe Open Source Subversion Repository
Revision: 13607
Author:   jimurphy@adobe.com
Date:     2010-01-19T02:10:04.001475Z

Log Message: 
-----------
Merge /branches/4.0.0revs 13385,13387,13388,13389,13390,13391,13392,13393,13405,13408,13409,13411,13417,13419,13423,13424,13428,13433,13434,13435,13436,13439,13440,13442,13444,13452,13454,13457,13458,13460,13466,13467,13468,13471,13472,13478,13479,13483,13486,13491,13493,13503,13505,13516,13518,13522,13523,13524,13530,13531,13532,13535,13537,13539,13540,13541,13548,13549,13553,13555,13560,13569 -> trunk

Checkintests pass

log from 4.0.0 changes
------------------------------------------------------------------------
r13385 | clucier@adobe.com | 2010-01-08 15:28:53 -0500 (Fri, 08 Jan 2010) | 8 lines

include-sources now expands tokens (such as {locale}).
SDK-24938 
------------------------------------------------------------------------

------------------------------------------------------------------------
r13387 | clucier@adobe.com | 2010-01-08 16:27:03 -0500 (Fri, 08 Jan 2010) | 10 lines

Adding mxml flavor of HTTPMultiService back to manifest.

SDK-24748 

------------------------------------------------------------------------

------------------------------------------------------------------------
r13388 | pfarland@adobe.com | 2010-01-08 17:35:37 -0500 (Fri, 08 Jan 2010) | 9 lines

No code changes here - addressing several FIXMEs for 4.0.0.


------------------------------------------------------------------------

------------------------------------------------------------------------
r13389 | gruehle@adobe.com | 2010-01-08 17:39:49 -0500 (Fri, 08 Jan 2010) | 12 lines

Deprecate (mostly) creationPolicy="queued". This feature hasn't worked correctly since Flex 1.5. 

The ContainerCreationPolicy.QUEUED property could not be deprecated due to a bug, but the Container.creationIndex property is deprecated, and the "queued" option is removed from the inspectable metadata enumeration.

SDK-2447

--- a/projects/spark/MXFTEText.css
+++ b/projects/spark/MXFTEText.css
@@ -43,7 +43,9 @@
     You should not modify this file.
 */
 
+@namespace charts "mx.charts.chartClasses.*";
 @namespace mx "library://ns.adobe.com/flex/mx";
+@namespace olap "mx.controls.olapDataGridClasses.*";
 @namespace s "library://ns.adobe.com/flex/spark";
 
 mx|AlertForm
@@ -181,34 +183,24 @@ mx|AdvancedDataGridSortItemRenderer
 	textFieldClass: ClassReference("mx.core.UIFTETextField");
 }
 
-mx|AxisRenderer
+charts|ChartLabel
 {
 	textFieldClass: ClassReference("mx.core.UIFTETextField");
 }
 
-mx|BarSeries
+charts|DataTip
 {
 	textFieldClass: ClassReference("mx.core.UIFTETextField");
 }
 
-mx|ChartLabel
+charts|DualStyleObject
 {
 	textFieldClass: ClassReference("mx.core.UIFTETextField");
 }
 
-mx|ColumnSeries
+charts|Series
 {
 	textFieldClass: ClassReference("mx.core.UIFTETextField");
-}
-
-mx|DataTip
-{
-	textFieldClass: ClassReference("mx.core.UIFTETextField");
-}
-
-s|FTEAdvancedDataGridItemRenderer
-{
-	paddingLeft: 5 /* to match AdvancedDataGridItemRenderer in the MX defaults.css */
 }
 
 mx|LegendItem
@@ -216,13 +208,13 @@ mx|LegendItem
 	textFieldClass: ClassReference("mx.core.UIFTETextField");
 }
 
-mx|OLAPDataGridGroupRenderer
+olap|OLAPDataGridGroupRenderer
 {
 	textFieldClass: ClassReference("mx.core.UIFTETextField");
 }
 
-mx|PieSeries
+s|FTEAdvancedDataGridItemRenderer
 {
-	textFieldClass: ClassReference("mx.core.UIFTETextField");
+	paddingLeft: 5 /* to match AdvancedDataGridItemRenderer in the MX defaults.css */
 }
 
